<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.detail.DetailUserActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:padding="16dp"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/ic_baseline_arrow_back_ios_new_24"
                android:contentDescription="@string/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_user"
                android:textSize="24sp"
                android:layout_marginStart="12dp"
                android:textColor="@color/customColorPrimary"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/back"
                app:layout_constraintTop_toTopOf="parent"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="24dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/back"
                 />

            <TextView
                android:id="@+id/name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="36dp"
                android:textColor="@color/customColorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                android:maxLines="2"
                app:layout_constraintStart_toEndOf="@+id/img"
                app:layout_constraintTop_toBottomOf="@+id/back"
                tools:text="" />

            <TextView
                android:id="@+id/username"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="start"
                android:maxLines="2"
                android:textSize="14sp"
                android:textColor="@color/customColorPrimary"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/name"
                tools:text="" />

            <ImageView
                android:id="@+id/ic_organization"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_baseline_location_city_24"
                android:contentDescription="@string/organization" />
            <TextView
                android:id="@+id/organization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text=""
                style="@style/TextDefault"
                app:layout_constraintStart_toEndOf="@+id/ic_organization"
                app:layout_constraintBottom_toBottomOf="@+id/ic_organization"
                app:layout_constraintTop_toTopOf="@+id/ic_organization"/>

            <ImageView
                android:id="@+id/ic_city"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ic_organization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_baseline_location_on_24"
                android:contentDescription="@string/location" />
            <TextView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text=""
                style="@style/TextDefault"
                app:layout_constraintStart_toEndOf="@+id/ic_city"
                app:layout_constraintTop_toTopOf="@+id/ic_city"
                app:layout_constraintBottom_toBottomOf="@+id/ic_city"/>

            <ImageView
                android:id="@+id/ic_repo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ic_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_baseline_library_books_24"
                android:contentDescription="@string/repository" />
            <TextView
                android:id="@+id/repo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text=""
                style="@style/TextDefault"
                app:layout_constraintStart_toEndOf="@+id/ic_repo"
                app:layout_constraintTop_toTopOf="@+id/ic_repo"
                app:layout_constraintBottom_toBottomOf="@+id/ic_repo"/>
            <ImageView
                android:id="@+id/ic_follower"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ic_repo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_baseline_person_24"
                android:contentDescription="@string/follower" />
            <TextView
                android:id="@+id/follower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text=""
                android:textStyle="bold"
                style="@style/TextDefault"
                app:layout_constraintStart_toEndOf="@+id/ic_follower"
                app:layout_constraintTop_toTopOf="@+id/ic_follower"
                app:layout_constraintBottom_toBottomOf="@+id/ic_follower"/>
            <TextView
                android:id="@+id/text_follower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/follower"
                style="@style/TextDefault"
                app:layout_constraintStart_toEndOf="@+id/follower"
                app:layout_constraintTop_toTopOf="@+id/follower"
                app:layout_constraintBottom_toBottomOf="@+id/follower"/>

            <ImageView
                android:id="@+id/ic_following"
                app:layout_constraintStart_toEndOf="@id/text_follower"
                app:layout_constraintTop_toBottomOf="@+id/ic_repo"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="12dp"
                android:src="@drawable/ic_baseline_brightness_1_24"
                android:contentDescription="@string/following" />
            <TextView
                android:id="@+id/following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text=""
                android:textStyle="bold"
                style="@style/TextDefault"
                app:layout_constraintStart_toEndOf="@+id/ic_following"
                app:layout_constraintTop_toTopOf="@+id/ic_following"
                app:layout_constraintBottom_toBottomOf="@+id/ic_following"/>
            <TextView
                android:id="@+id/text_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/following"
                style="@style/TextDefault"
                app:layout_constraintStart_toEndOf="@+id/following"
                app:layout_constraintTop_toTopOf="@+id/following"
                app:layout_constraintBottom_toBottomOf="@+id/following"/>
            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/customColorPrimary"
                android:layout_marginHorizontal="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="24dp"
                app:tabIndicatorColor="@color/customColorPrimarySecond"
                app:tabSelectedTextColor="@color/customColorPrimarySecond"
                app:tabBackground="@color/customColorPrimary"
                app:layout_constraintTop_toBottomOf="@+id/follower"
                app:tabTextColor="@color/customColorPrimarySecond"/>
         <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tabs"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="32dp"
                    android:contentDescription="@string/action"
                    android:src="@drawable/ic_baseline_add_24"
                    app:backgroundTint="@color/white_primary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/action"
        app:layout_constraintEnd_toEndOf="parent"
        app:backgroundTint="@color/white_primary"
        android:src="@drawable/ic_baseline_favorite_border_24"
        android:visibility="gone"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="96dp"
        android:contentDescription="@string/favorite_user" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/bookmark"
        app:layout_constraintEnd_toEndOf="parent"
        app:backgroundTint="@color/white_primary"
        android:src="@drawable/ic_baseline_share_24"
        android:visibility="gone"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="160dp"
        android:contentDescription="@string/share" />
    </FrameLayout>

</LinearLayout>